# GHOST_PROTOCOL

./: .gitignore  GHOSTWIRE_IMPLEMENTATION_SPEC.md  GHOSTWIRE_PRODUCT_SPEC.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  hardhat.config.js  package-lock.json  package.json  tsconfig.json
.github/: banned-terms.txt
app/: head.tsx  layout.tsx
cache/: compile-cache.json
components/: AgentProfileAutoRefresh.tsx  TerminalHeader.tsx
contracts/: AgenticCommerce.sol  ForceSend.sol  GhostVault.old.sol  GhostVault.sol
docs/: fulfillment-operator-runbook.md  platform-how-to.md
lib/: agent-claim.ts  agent-gateway-auth-server.ts  agent-gateway-auth.ts  agent-gateway-canary.ts  agent-gateway-delegated-signers.ts  agent-gateway-rate-limit.ts  agent-gateway.ts  constants.ts  db.ts  fulfillment-eip712.ts  fulfillment-hash.ts  fulfillment-observability.ts  fulfillment-rate-limit.ts  fulfillment-route.ts  fulfillment-types.ts  ghostrank-rail-score.ts  ghostwire-admin-route.ts  ghostwire-attribution.ts  ghostwire-config.ts  ghostwire-contract.ts  ghostwire-deliverable.ts  ghostwire-exec-auth.ts  ghostwire-exec-policy.ts  ghostwire-operator.ts  ghostwire-route.ts  ghostwire-score-rollup.ts  ghostwire-store.ts  ghostwire-webhooks.ts  leaderboard-snapshot.ts  merchant-settlement-allocator.ts  merchant-settlement-chain.ts  merchant-settlement-reconcile.ts  merchant-settlement-route.ts  merchant-settlement.ts  (+5 more)
sdks/python/: PUBLISHING.md  README.md  ghost_fulfillment.py  ghostgate.py  pyproject.toml
sdks/python/tests/: test_activate.py  test_wire_methods.py
(+146 files in other folders)
