[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostgate-sdk"
version = "0.1.0"
description = "Ghost Protocol Python SDK for gate access and telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ghost Protocol" }
]
keywords = ["ghostgate", "ghost protocol", "web3", "api", "sdk", "telemetry"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
  "eth-account>=0.13.0",
]

[project.urls]
Homepage = "https://ghostprotocol.cc"
Repository = "https://github.com/Ghost-Protocol-Infrastructure/GHOST_PROTOCOL"
Documentation = "https://ghostprotocol.cc/docs"
Issues = "https://github.com/Ghost-Protocol-Infrastructure/GHOST_PROTOCOL/issues"

[tool.setuptools]
py-modules = ["ghostgate", "ghost_fulfillment"]
